# RIN

./: .gitignore  architecture.md  check_import.py  conftest.py  pyproject.toml  pytest.ini  requirements.txt  roadmap.md  test_article.md  testlint.py
logs/: 20250525-112547-934380-381f3191.json  20250525-114429-467359-21880125.json  20250525-114542-486164-c6637654.json  20250525-115146-888159-b6bdc33d.json  20250525-120354-563155-18f51aa2.json  20250525-121812-191314-e3201410.json  20250525-125450-594350-48002b7f.json  20250525-130421-392354-a6e1f393.json  20250525-131254-992850-4f4b44c0.json  20250525-131904-602094-044e7141.json  20250525-134021-802730-7b46a419.json  20250525-134555-109404-b8d19ad1.json  20250525-134943-951848-432a1742.json
src/rin/: __init__.py  cli.py  config.py  core.py  formatter.py  model_client.py  report.py  validators.py
tests/unit/: test_cli.py  test_config.py  test_core.py  test_formatter.py  test_model_client.py  test_validators.py
