[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rin"
version = "0.1.0"
# You can add authors, description, etc. here later if you want

[tool.setuptools.packages.find]
where = ["src"]  # Tells setuptools your packages are under the 'src' directory

